[FI-57] 코드 정리